--- a/dulux-colour-consultation.html
+++ b/dulux-colour-consultation.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <!-- Header -->
+    <!-- Logon Header -->
     <div class="container-fluid">
         <div class="row image-container" style="background-color: white; height: 80px;">
             <a href="home.html"><img src="img/webimg/logo.png" class="img-responsive center" alt="Responsive image"
@@ -59,6 +59,7 @@
         </div>
     </div>
 
+    <!-- navigation part -->
     <nav class="navbar navbar-expand-md  navbar-dark bg-dark" id="menu-nav">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation-bar"
             aria-controls="navigation-bar" aria-expanded="false" aria-label="Toggle navigation">
@@ -107,6 +108,7 @@
         </div>
     </div>
 
+    <!-- Main Content -->
     <div class="container" style="margin-top:30px">
         <div class="row">
             <div class="col-sm-2">
@@ -126,25 +128,36 @@
             </div>
 
             <div class="col-sm-10">
-                <h2>TITLE HEADING</h2>
-                <h5>Title description, Dec 7, 2017</h5>
-                <div class="fakeimg">Fake Image</div>
-                <p>Some text..</p>
-                <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
-                    eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation
-                    ullamco.</p>
-                <br>
-                <h2>TITLE HEADING</h2>
-                <h5>Title description, Sep 2, 2017</h5>
-                <div class="fakeimg">Fake Image</div>
-                <p>Some text..</p>
-                <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
-                    eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation
-                    ullamco.</p>
+                <h2
+                    style="margin-bottom: 10px; font-family: 'Zhi Mang Xing', cursive; letter-spacing: 3px; font-size: 50px; font-weight:bold;">
+                    Dulux Colour Consultation
+                </h2>
+                <img style="width: 100%; " src="img/webimg/dulux_colour_consultant.jpg">
+                </br>
+                <p style="font-size: 18px;">Milad Painting use products from the brand Dulux! Dulux Company offers
+                    consultation about the kind of paint you choose, the colour scheme etc. Thus you will have two
+                    people helping you to finalize on your painting needs; one Milad Painting and the other is
+                    Dulux Colour Consultants! The long lasting quality of Dulux paints will help you to keep your
+                    home looking its best for many years to come.</p>
+                <p style="font-size: 18px;">Dulux Colour Consultants are qualified Interior Decorators with the
+                    experience and therefore they help you paint your dream house true!!
+                </p>
+                <p style="font-size: 18px;">Once you contact the consultancy through web or phone, they would get
+                    you contact number and call you back for getting your suggestions, requirements and thoughts
+                    about the kind of dream house and paint you wanted. Then they would arrive at your house and
+                    suggest you the colours and products to be used based on the location of your house, existing
+                    furnishings and various other factors.
+                </p>
+                <p style="font-size: 18px;">At the end of the consultation you will be given a written report of
+                    what products you need and what colours blend well in which places. Our Consultants will also
+                    provide you with colour samples from which you and your family can choose.
+                </p>
+                <p style="font-size: 18px;">Thus now you would understand how helpful the Dulux Colour Consultancy
+                    Services can be!! In addition to it, if you get the best Painters in Melbourne, to paint your
+                    house or office in the finest possible way, then your painting job becomes pleasurable!! Milad
+                    Painting can do it all for you, because we are the finest Painters in Melbourne!! Just give us a
+                    call and we would guide you in taking further steps all through the painting process!
+                </p>
             </div>
         </div>
     </div>
