--- a/plastering.html
+++ b/plastering.html
@@ -137,7 +137,7 @@
 
                 <p style="font-size: 18px;">The process of plastering might seem to be an easy task. But then it is an
                     art by itself which requires accuracy and perfection in the technique, extreme attention to minute
-                    details, and fair amount of knowledge about how it has to be done. Ansell Painters Melbourne master
+                    details, and fair amount of knowledge about how it has to be done. Milad Painters Melbourne master
                     in the art of Plas tering and you will have no worries when they are handling your plastering work!!
                 </p>
                 <p style="font-size: 18px;">The very first step in plastering project is to collect the tools required
@@ -176,7 +176,7 @@
                     <p style="font-size: 18px;">Ok! Now you would have never thought plastering is such a long and
                         minute process to be handled! It can very well be done by yourself but when you have
                         professional people to work for you, at best budgets, why do you need to do it all yourself??
-                        Ansell Painting has got a team of professional and experienced painters who do excellent
+                        Milad Painting has got a team of professional and experienced painters who do excellent
                         plastering work as well!! They will make your plastering work easier and finish them with a
                         professional touch! We are located in Melbourne and extend our services to other nearby suburbs
                         as well!
