--- a/home.html
+++ b/home.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="nav.css">
   <link rel="stylesheet" href="home.css">
   <link rel="stylesheet" href="footer.css">
+  <link rel="stylesheet" href="quote_carousel.css">
+
 
   <link href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" rel="stylesheet">
   <link href="https://raw.githubusercontent.com/daneden/animate.css/master/animate.css" rel="stylesheet">
@@ -315,7 +317,7 @@
         <div class="our-services">
           <div class="col-sm-12">
             <h2 class="text-center" style="margin: 10px;">
-              <strong>Our Services</strong>
+              Our Services
             </h2>
           </div>
           <div class="row">
@@ -387,8 +389,82 @@
           </div>
         </div>
       </div>
-  </div>
-  </section>
+    </section>
+
+    <section id="our-comments">
+      <div class="container">
+        <div class="row">
+          <div class='col-md-offset-2 col-md-8 text-center'>
+            <h2>Our Cilents Comments</h2>
+          </div>
+        </div>
+        <div class='row'>
+          <div class='col-md-offset-2 col-md-8'>
+            <div class="carousel slide" data-ride="carousel" id="quote-carousel">
+
+              <!-- Carousel Slides / Quotes -->
+              <div class="carousel-inner">
+                <!-- Quote 1 -->
+                <div class="carousel-item active">
+                  <blockquote>
+                    <div class="row">
+                      <div class="col-sm-3 text-center">
+                        <img class="img-circle" src="http://www.reactiongifs.com/r/overbite.gif"
+                          style="width: 100px;height:100px;">
+                        <!--<img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/kolage/128.jpg" style="width: 100px;height:100px;">-->
+                      </div>
+                      <div class="col-sm-9">
+                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit!
+                        </p>
+                        <small>Someone famous</small>
+                      </div>
+                    </div>
+                  </blockquote>
+                </div>
+                <!-- Quote 2 -->
+                <div class="carousel-item">
+                  <blockquote>
+                    <div class="row">
+                      <div class="col-sm-3 text-center">
+                        <img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/mijustin/128.jpg"
+                          style="width: 100px;height:100px;">
+                      </div>
+                      <div class="col-sm-9">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam auctor nec lacus ut tempor.
+                          Mauris.</p>
+                        <small>Someone famous</small>
+                      </div>
+                    </div>
+                  </blockquote>
+                </div>
+                <!-- Quote 3 -->
+                <div class="carousel-item">
+                  <blockquote>
+                    <div class="row">
+                      <div class="col-sm-3 text-center">
+                        <img class="img-circle"
+                          src="https://s3.amazonaws.com/uifaces/faces/twitter/keizgoesboom/128.jpg"
+                          style="width: 100px;height:100px;">
+                      </div>
+                      <div class="col-sm-9">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rutrum elit in arcu blandit, eget
+                          pretium nisl accumsan. Sed ultricies commodo tortor, eu pretium mauris.</p>
+                        <small>Someone famous</small>
+                      </div>
+                    </div>
+                  </blockquote>
+                </div>
+              </div>
+              <!-- Carousel Buttons Next/Prev -->
+              <a data-slide="prev" href="#quote-carousel" class="left carousel-control"><i
+                  class="fa fa-chevron-left"></i></a>
+              <a data-slide="next" href="#quote-carousel" class="right carousel-control"><i
+                  class="fa fa-chevron-right"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </div>
 
   <!-- Footer -->
@@ -444,9 +520,16 @@
     </div>
   </footer>
 
+
+  <a id="back-to-top" class="btn btn-light btn-lg back-to-top" role="button"><i class="fas fa-chevron-up"></i></a>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <script src="quote_carousel.js"></script>
+  <script src="scroll-to-back.js"></script>
+
+
 </body>
 
 </html>
