fixed the contact address
fixed the contact address

--- a/contact_us.html
+++ b/contact_us.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="banner.css">
   <link rel="stylesheet" href="nav.css">
   <link rel="stylesheet" href="footer.css">
+  <link rel="stylesheet" href="scroll-to-back.css">
+
 
   <link href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" rel="stylesheet">
 
@@ -92,41 +94,20 @@
     <div class="row">
       <div class="col-sm-5" style="height:100%; width:100%">
         <h2>Our address</h2>
-        <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
         <ul>
-          <li class="address">31 Murray Rd Dandenong North VIC 3175</li>
+          <li class="address">103 Ogilvie St, Essendon VIC 3040</li>
           <li class="phone"><a href="tel:+6142130103" style="color: black">+61 42130103</a></li>
           <li class="mail"><a href="mailto:miladpainting@gmail.com" style="color: black">miladpainting@gmail.com</a>
           </li>
         </ul>
-        <!--
-      <h3>Some Links</h3>
-      <p>Lorem ipsum dolor sit ame.</p>
-        
-      <ul class="nav nav-pills flex-column">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Active</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
-      </ul>
-      <hr class="d-sm-none">
--->
       </div>
 
       <div class="col-sm-7">
         <div class="map">
           <h2>Map Positioning</h2>
           <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3146.418251534554!2d145.21240701552782!3d-37.94401897972898!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad615cffff55ae9%3A0x423417b9ce6ebe04!2s31%20Murray%20Rd%2C%20Dandenong%20North%20VIC%203175!5e0!3m2!1sen!2sau!4v1578612781476!5m2!1sen!2sau"
-            height="100%" width="100%" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3154.949010292663!2d144.89111301570114!3d-37.74434043784782!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65c12e248d3d3%3A0xe23fea36a9a6984e!2s103%20Ogilvie%20St%2C%20Essendon%20VIC%203040!5e0!3m2!1sen!2sau!4v1581337145551!5m2!1sen!2sau"
+            width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </div>
       </div>
 
@@ -178,14 +159,13 @@
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-6 mt-2 mb-2">
           <h5 class="mb-4 font-weight-bold">CONTACT INFORMATION</h5>
-          <p class="mb-4">Etiam laoreet in ex quis efficitur.</p>
           <ul class="f-address">
             <li>
               <div class="row">
                 <div class="col-1"><i class="fas fa-location-arrow"></i></div>
                 <div class="col-8">
                   <h6 class="font-weight-bold mb-0" style="font-size: 13px;">Address:</h6>
-                  <p><a href="https://goo.gl/maps/FNS5EVP6fif1V3y38">31 Murray Rd Dandenong North VIC 3175</a></p>
+                  <p><a href="https://goo.gl/maps/Ru6bxjwitsk8CsGs7">103 Ogilvie St, Essendon VIC 3040</a></p>
                 </div>
               </div>
             </li>
@@ -239,12 +219,17 @@
     </div>
   </section>
 
+  <!-- Back to Top -->
+  <a id="back-to-top" class="btn btn-light btn-lg back-to-top" role="button"><i class="fas fa-chevron-up"></i></a>
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
+  <script src="scroll-to-back.js"></script>
 
 
 </body>
