--- a/home.html
+++ b/home.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="home.css">
   <link rel="stylesheet" href="footer.css">
   <link rel="stylesheet" href="quote_carousel.css">
+  <link rel="stylesheet" href="scroll-to-back.css">
 
 
   <link href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" rel="stylesheet">
@@ -32,7 +33,8 @@
         <li class="list-style">
           <div class="list-icon">
             <div>
-              <a href="#"><span class="fas fa-envelope" style="font-size: 2.0em; color: #1FF042 !Important; "></span>
+              <a href="mailto:miladpainting@gmail.com"><span class="fas fa-envelope"
+                  style="font-size: 2.0em; color: #1FF042 !Important; "></span>
               </a>
             </div>
             <div style="padding-left: 15px;">
@@ -69,7 +71,7 @@
     <div class="collapse navbar-collapse" id="navigation-bar">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="home.html"><i class="fas fa-home"></i><span>Home</span></a>
+          <a class="nav-link" href="#welcome"><i class="fas fa-home"></i><span>Home</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="service.html"><i class="fas fa-paint-roller"></i><span>Services</span></a>
@@ -125,8 +127,9 @@
               <div class="col-md-7 col-12 order-md-1 order-2">
                 <h4>High Quality <br>
                   On Painting</h4>
-                <p>Lorem ipsum dolor sit amet. Reprehenderit, qui blanditiis quidem rerum <br>
-                  necessitatibus praesentium voluptatum deleniti atque corrupti.</p>
+
+                <p style="color: black;">Using the best equipment and techniques, <br> we go above and beyond to
+                  deliver superior results for our clients.</p>
                 <a data-target="#modalform" data-toggle="modal">Get Free Quote</a>
               </div>
               <div class="col-md-5 col-12 order-md-2 order-1"><img src="img/webimg/greenbrush.png" class="mx-auto"
@@ -135,15 +138,15 @@
           </div>
         </div>
       </div>
-      <div class="carousel-item">
-        <div class="mask flex-center">
+      <div class="carousel-item"
+        style="background: url(img/webimg/wallpaper3.jpg) center no-repeat; background-size: cover;">
+        <div class=" mask flex-center">
           <div class="container">
             <div class="row align-items-center">
               <div class="col-md-7 col-12 order-md-1 order-2">
-                <h4>Present your <br>
-                  awesome product</h4>
-                <p>Lorem ipsum dolor sit amet. Reprehenderit, qui blanditiis quidem rerum <br>
-                  necessitatibus praesentium voluptatum deleniti atque corrupti.</p>
+                <h4>Customer Satisfaction is our Aim</h4>
+                <p style="color: black;">We pride ourselves on our exceptional level of customer service,<br>
+                  including providing accurate and detailed quotes.</p>
                 <a data-target="#modalform" data-toggle="modal">Get Free Quote</a>
               </div>
               <div class="col-md-5 col-12 order-md-2 order-1"><img src="img/webimg/painting_person1.png" class="mx-auto"
@@ -414,9 +417,11 @@
                         <!--<img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/kolage/128.jpg" style="width: 100px;height:100px;">-->
                       </div>
                       <div class="col-sm-9">
-                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit!
+                        <p>I have known Milad Painters personally for many years. They bring the knowledge, experience,
+                          skills and professionalism that we need when seek painters. Their approach is very practical
+                          and clear.
                         </p>
-                        <small>Someone famous</small>
+                        <small>William. Smith</small>
                       </div>
                     </div>
                   </blockquote>
@@ -430,9 +435,9 @@
                           style="width: 100px;height:100px;">
                       </div>
                       <div class="col-sm-9">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam auctor nec lacus ut tempor.
-                          Mauris.</p>
-                        <small>Someone famous</small>
+                        <p>Milad Painting Services was able to provide opinion, knowledge and skills in assisting us in
+                          our complex choosing of colours and products.</p>
+                        <small>Holland. Smith</small>
                       </div>
                     </div>
                   </blockquote>
@@ -447,9 +452,12 @@
                           style="width: 100px;height:100px;">
                       </div>
                       <div class="col-sm-9">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rutrum elit in arcu blandit, eget
-                          pretium nisl accumsan. Sed ultricies commodo tortor, eu pretium mauris.</p>
-                        <small>Someone famous</small>
+                        <p>Hi Khanbabee ,
+                          Thank you for the fabulous job. I never though my house could possibly look this great by just
+                          painting it. It was proffessionally done and there was no surprises during and at the end of
+                          the job. I absolutely love the colours. You are highly recommended to anyone seeking a high
+                          quality paint. Much appreciated.</p>
+                        <small>Michelle. Mentone</small>
                       </div>
                     </div>
                   </blockquote>
@@ -465,6 +473,17 @@
         </div>
       </div>
     </section>
+
+    <!-- Contact Phone Part -->
+    <section id="contactPhone">
+      <div class="col-sm-12">
+        <div class="btm_contact">
+          <p>Call us today to get your free quote!
+            <a href="tel:0442130103" title="0442130103">0442 130 103</a>
+          </p>
+        </div>
+    </section>
+
   </div>
 
   <!-- Footer -->
@@ -479,7 +498,7 @@
                 <div class="col-1"><i class="fas fa-location-arrow"></i></div>
                 <div class="col-8">
                   <h6 class="font-weight-bold mb-0" style="font-size: 13px;">Address:</h6>
-                  <p><a href="https://goo.gl/maps/FNS5EVP6fif1V3y38">31 Murray Rd Dandenong North VIC 3175</a></p>
+                  <p><a href="https://goo.gl/maps/Ru6bxjwitsk8CsGs7">103 Ogilvie St, Essendon VIC 3040</a></p>
                 </div>
               </div>
             </li>
@@ -521,6 +540,20 @@
   </footer>
 
 
+  <!-- Copyright -->
+  <section class="copyright">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 ">
+          <div class="text-center text-black">
+            &copy; 2020 Milad Painting. All Rights Reserved.
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Back to Top -->
   <a id="back-to-top" class="btn btn-light btn-lg back-to-top" role="button"><i class="fas fa-chevron-up"></i></a>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
