--- a/about_us.html
+++ b/about_us.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" href="sidebar.css">
   <link rel="stylesheet" href="service-sidebar.css">
   <link rel="stylesheet" href="snackbar.css">
+  <link rel="stylesheet" href="scroll-to-back.css">
+
 
 
 
@@ -178,6 +180,15 @@
           to get your free quote!
         </p>
 
+        <!-- Contact Phone Part -->
+        <section id="contactPhone">
+          <div class="col-sm-12">
+            <div class="btm_contact">
+              <p>Call us today to get your free quote!
+                <a href="tel:0442130103" title="0442130103">0442 130 103</a>
+              </p>
+            </div>
+        </section>
 
         <!-- snackbar part -->
         <div class="col-sm-2">
@@ -214,14 +225,13 @@
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-6 mt-2 mb-2">
           <h5 class="mb-4 font-weight-bold">CONTACT INFORMATION</h5>
-          <p class="mb-4">Etiam laoreet in ex quis efficitur.</p>
           <ul class="f-address">
             <li>
               <div class="row">
                 <div class="col-1"><i class="fas fa-location-arrow"></i></div>
                 <div class="col-8">
                   <h6 class="font-weight-bold mb-0" style="font-size: 13px;">Address:</h6>
-                  <p><a href="https://goo.gl/maps/FNS5EVP6fif1V3y38">31 Murray Rd Dandenong North VIC 3175</a></p>
+                  <p><a href="https://goo.gl/maps/Ru6bxjwitsk8CsGs7">103 Ogilvie St, Essendon VIC 3040</a></p>
                 </div>
               </div>
             </li>
@@ -262,6 +272,22 @@
     </div>
   </footer>
 
+  <!-- Copyright -->
+  <section class="copyright">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 ">
+          <div class="text-center text-black">
+            &copy; 2020 Milad Painting. All Rights Reserved.
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Back to Top -->
+  <a id="back-to-top" class="btn btn-light btn-lg back-to-top" role="button"><i class="fas fa-chevron-up"></i></a>
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -272,6 +298,8 @@
   <script src="service-sidebar.js"></script>
 
   <script src="snackbar.js"></script>
+
+  <script src="scroll-to-back.js"></script>
 
 
 
