--- a/residential-painting.html
+++ b/residential-painting.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="breadcrumb.css">
     <link rel="stylesheet" href="service-sidebar.css">
     <link rel="stylesheet" href="servicePictureModal.css">
+    <link rel="stylesheet" href="scroll-to-back.css">
 
 
     <link href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" rel="stylesheet">
@@ -314,9 +315,8 @@
                                 <div class="col-1"><i class="fas fa-location-arrow"></i></div>
                                 <div class="col-8">
                                     <h6 class="font-weight-bold mb-0" style="font-size: 13px;">Address:</h6>
-                                    <p><a href="https://goo.gl/maps/FNS5EVP6fif1V3y38">31 Murray Rd
-                                            Dandenong North VIC
-                                            3175</a></p>
+                                    <p><a href="https://goo.gl/maps/Ru6bxjwitsk8CsGs7">103 Ogilvie St, Essendon VIC
+                                            3040</a></p>
                                 </div>
                             </div>
                         </li>
@@ -361,6 +361,24 @@
     </footer>
 
 
+    <!-- Copyright -->
+    <section class="copyright">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 ">
+                    <div class="text-center text-black">
+                        &copy; 2020 Milad Painting. All Rights Reserved.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Back to Top -->
+    <a id="back-to-top" class="btn btn-light btn-lg back-to-top" role="button"><i class="fas fa-chevron-up"></i></a>
+
+
+
     <!-- javascript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -371,6 +389,9 @@
     <script src="service-sidebar.js"></script>
 
     <script src="servicePictureModal.js"></script>
+
+    <script src="scroll-to-back.js"></script>
+
 
 </body>
 
