--- a/service.html
+++ b/service.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="banner.css">
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="footer.css">
-
+    <link rel="stylesheet" href="scroll-to-back.css">
 
 
     <link href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" rel="stylesheet">
@@ -135,15 +135,14 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6 mt-2 mb-2">
                     <h5 class="mb-4 font-weight-bold">CONTACT INFORMATION</h5>
-                    <p class="mb-4">Etiam laoreet in ex quis efficitur.</p>
                     <ul class="f-address">
                         <li>
                             <div class="row">
                                 <div class="col-1"><i class="fas fa-location-arrow"></i></div>
                                 <div class="col-8">
                                     <h6 class="font-weight-bold mb-0" style="font-size: 13px;">Address:</h6>
-                                    <p><a href="https://goo.gl/maps/FNS5EVP6fif1V3y38">31 Murray Rd Dandenong North VIC
-                                            3175</a></p>
+                                    <p><a href="https://goo.gl/maps/Ru6bxjwitsk8CsGs7">103 Ogilvie St, Essendon VIC
+                                            3040</a></p>
                                 </div>
                             </div>
                         </li>
@@ -185,11 +184,32 @@
     </footer>
 
 
+    <!-- Copyright -->
+    <section class="copyright">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 ">
+                    <div class="text-center text-black">
+                        &copy; 2020 Milad Painting. All Rights Reserved.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Back to Top -->
+    <a id="back-to-top" class="btn btn-light btn-lg back-to-top" role="button"><i class="fas fa-chevron-up"></i></a>
+
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
+    <script src="scroll-to-back.js"></script>
+
 </body>
 
 </html>
