fixed the comment for code
fixed the comment for code

--- a/about_us.html
+++ b/about_us.html
@@ -38,7 +38,8 @@
         <li class="list-style">
           <div class="list-icon">
             <div>
-              <a href="#"><span class="fas fa-envelope" style="font-size: 2.0em; color: #1FF042 !Important; "></span>
+              <a href="mailto:miladpainting@gmail.com"><span class="fas fa-envelope"
+                  style="font-size: 2.0em; color: #1FF042 !Important; "></span>
               </a>
             </div>
             <div style="padding-left: 15px;">
@@ -51,11 +52,12 @@
         <li class="list-style">
           <div class="list-icon">
             <div>
-              <a href="#"><span class="fas fa-phone" style="font-size: 2.0em; color: #1FF042 !Important;"></span></a>
+              <a href="tel:+6124 449 225"><span class="fas fa-phone"
+                  style="font-size: 2.0em; color: #1FF042 !Important;"></span></a>
             </div>
             <div style="padding-left: 15px;">
               <b>Call Us</b> <br>
-              <i>+61 42130103</i>
+              <i>+61 24 449 225</i>
             </div>
 
           </div>
@@ -185,22 +187,21 @@
           <div class="col-sm-12">
             <div class="btm_contact">
               <p>Call us today to get your free quote!
-                <a href="tel:0442130103" title="0442130103">0442 130 103</a>
-              </p>
+                <a href="tel:+6124 449 225">+61 24 449 225</a> </p>
             </div>
         </section>
 
         <!-- snackbar part -->
         <div class="col-sm-2">
           <div id="snackbar">Call us today to get your free quote! <a style="color: rgb(142, 245, 211);"
-              href="tel:+6142130103">+61
-              421301030</a></div>
+              href="tel:+6124 449 225">+61 24 449 225</a></div>
         </div>
 
 
 
 
       </div>
+      <!-- Side Menu -->
       <div class="col-sm-2">
         <div id="myNav" class="overlay">
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -209,6 +210,7 @@
             <a href="spray-painting.html">Spraying Painters</a>
             <a href="roof-painting.html">Roof Painters</a>
             <a href="commerical-painting.html">Commercial Painters</a>
+            <a href="exterior-painting.html">Exterior Painters</a>
             <a href="plastering.html">Plastering</a>
             <a href="dulux-colour-consultation.html">Dulux Colour Consultation</a>
           </div>
@@ -249,7 +251,7 @@
                 <div class="col-1"><i class="fas fa-phone"></i></div>
                 <div class="col-9">
                   <h6 class="font-weight-bold mb-0" style="font-size: 13px;">Phone Number:</h6>
-                  <p><a href="tel:+6142130103">+61 421301030</a></p>
+                  <p><a href="tel:+6124 449 225">+61 24 449 225</a></p>
                 </div>
               </div>
             </li>
