--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
 
 <body>
 
-  <!-- Header -->
+  <!-- Logon Header -->
   <div class="container-fluid">
     <div class="row image-container" style="background-color: white; height: 80px;">
       <a href="home.html"><img src="img/webimg/logo.png" class="img-responsive center" alt="Responsive image"
@@ -29,7 +29,7 @@
       </a>
     </div>
     <div class="jumbotron slogan-img" style="background-color: white">
-      <ul id="banner-list" style="background-color: transparent">
+      <ul id="banner-list">
         <li class="list-style">
           <div class="list-icon">
             <div>
@@ -47,11 +47,12 @@
         <li class="list-style">
           <div class="list-icon">
             <div>
-              <a href="#"><span class="fas fa-phone" style="font-size: 2.0em; color: #1FF042 !Important;"></span></a>
+              <a href="tel:+6124 449 225"><span class="fas fa-phone"
+                  style="font-size: 2.0em; color: #1FF042 !Important;"></span></a>
             </div>
             <div style="padding-left: 15px;">
               <b>Call Us</b> <br>
-              <i>+61 42130103</i>
+              <i>+61 24 449 225</i>
             </div>
 
           </div>
@@ -479,15 +480,14 @@
       <div class="col-sm-12">
         <div class="btm_contact">
           <p>Call us today to get your free quote!
-            <a href="tel:0442130103" title="0442130103">0442 130 103</a>
-          </p>
+            <a href="tel:+6124 449 225">+61 24 449 225</a> </p>
         </div>
     </section>
 
   </div>
 
   <!-- Footer -->
-  <footer class="pt-5 pb-4" id="footer">
+  <footer class="pt-5 pb-4" id="contact">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-6 mt-2 mb-2">
@@ -516,7 +516,7 @@
                 <div class="col-1"><i class="fas fa-phone"></i></div>
                 <div class="col-9">
                   <h6 class="font-weight-bold mb-0" style="font-size: 13px;">Phone Number:</h6>
-                  <p><a href="tel:+6142130103">+61 421301030</a></p>
+                  <p><a href="tel:+6124 449 225">+61 24 449 225</a></p>
                 </div>
               </div>
             </li>
@@ -538,7 +538,6 @@
       </div>
     </div>
   </footer>
-
 
   <!-- Copyright -->
   <section class="copyright">
