--- a/residential-painting.html
+++ b/residential-painting.html
@@ -34,7 +34,7 @@
                 <li class="list-style">
                     <div class="list-icon">
                         <div>
-                            <a href="#"><span class="fas fa-envelope"
+                            <a href="mailto:miladpainting@gmail.com"><span class="fas fa-envelope"
                                     style="font-size: 2.0em; color: #1FF042 !Important; "></span>
                             </a>
                         </div>
@@ -48,12 +48,12 @@
                 <li class="list-style">
                     <div class="list-icon">
                         <div>
-                            <a href="#"><span class="fas fa-phone"
+                            <a href="tel:+6124 449 225"><span class="fas fa-phone"
                                     style="font-size: 2.0em; color: #1FF042 !Important;"></span></a>
                         </div>
                         <div style="padding-left: 15px;">
                             <b>Call Us</b> <br>
-                            <i>+61 42130103</i>
+                            <i>+61 24 449 225</i>
                         </div>
 
                     </div>
@@ -114,9 +114,8 @@
     <!-- Main content -->
     <div class="container" style="margin-top:30px">
         <div class="row">
+            <!-- Side Menu -->
             <div class="col-sm-2">
-
-                <!-- our service side-navbar -->
                 <div id="myNav" class="overlay">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                     <div class="overlay-content">
@@ -124,6 +123,7 @@
                         <a href="spray-painting.html">Spraying Painters</a>
                         <a href="roof-painting.html">Roof Painters</a>
                         <a href="commerical-painting.html">Commercial Painters</a>
+                        <a href="exterior-painting.html">Exterior Painters</a>
                         <a href="plastering.html">Plastering</a>
                         <a href="dulux-colour-consultation.html">Dulux Colour Consultation</a>
                     </div>
@@ -304,7 +304,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class=" pt-5 pb-4" id="contact">
+    <footer class="pt-5 pb-4" id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6 mt-2 mb-2">
@@ -324,10 +324,8 @@
                             <div class="row">
                                 <div class="col-1"><i class="fas fa-envelope"></i></div>
                                 <div class="col-8">
-                                    <h6 class="font-weight-bold mb-0" style="font-size: 13px;">Have any
-                                        questions?</h6>
-                                    <p><a href="mailto:miladpainting@gmail.com">miladpainting@gmail.com</a>
-                                    </p>
+                                    <h6 class="font-weight-bold mb-0" style="font-size: 13px;">Have any questions?</h6>
+                                    <p><a href="mailto:miladpainting@gmail.com">miladpainting@gmail.com</a></p>
                                 </div>
                             </div>
                         </li>
@@ -335,9 +333,8 @@
                             <div class="row">
                                 <div class="col-1"><i class="fas fa-phone"></i></div>
                                 <div class="col-9">
-                                    <h6 class="font-weight-bold mb-0" style="font-size: 13px;">Phone Number:
-                                    </h6>
-                                    <p><a href="tel:+6142130103">+61 421301030</a></p>
+                                    <h6 class="font-weight-bold mb-0" style="font-size: 13px;">Phone Number:</h6>
+                                    <p><a href="tel:+6124 449 225">+61 24 449 225</a></p>
                                 </div>
                             </div>
                         </li>
@@ -360,9 +357,8 @@
         </div>
     </footer>
 
-
     <!-- Copyright -->
-    <section class="copyright">
+    <div class="copyright">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 ">
@@ -372,7 +368,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 
     <!-- Back to Top -->
     <a id="back-to-top" class="btn btn-light btn-lg back-to-top" role="button"><i class="fas fa-chevron-up"></i></a>
