--- a/contact_us.html
+++ b/contact_us.html
@@ -19,7 +19,7 @@
 
 <body>
 
-  <!-- Header -->
+  <!-- Logon Header -->
   <div class="container-fluid">
     <div class="row image-container" style="background-color: white; height: 80px;">
       <a href="home.html"><img src="img/webimg/logo.png" class="img-responsive center" alt="Responsive image"
@@ -31,7 +31,8 @@
         <li class="list-style">
           <div class="list-icon">
             <div>
-              <a href="#"><span class="fas fa-envelope" style="font-size: 2.0em; color: #1FF042 !Important; "></span>
+              <a href="mailto:miladpainting@gmail.com"><span class="fas fa-envelope"
+                  style="font-size: 2.0em; color: #1FF042 !Important; "></span>
               </a>
             </div>
             <div style="padding-left: 15px;">
@@ -44,11 +45,12 @@
         <li class="list-style">
           <div class="list-icon">
             <div>
-              <a href="#"><span class="fas fa-phone" style="font-size: 2.0em; color: #1FF042 !Important;"></span></a>
+              <a href="tel:+6124 449 225"><span class="fas fa-phone"
+                  style="font-size: 2.0em; color: #1FF042 !Important;"></span></a>
             </div>
             <div style="padding-left: 15px;">
               <b>Call Us</b> <br>
-              <i>+61 42130103</i>
+              <i>+61 24 449 225</i>
             </div>
 
           </div>
@@ -57,6 +59,7 @@
     </div>
   </div>
 
+  <!-- navigation part -->
   <nav class="navbar navbar-expand-md  navbar-dark bg-dark" id="menu-nav">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation-bar"
       aria-controls="navigation-bar" aria-expanded="false" aria-label="Toggle navigation">
@@ -90,6 +93,7 @@
     </div>
   </nav>
 
+  <!-- Main content -->
   <div class="container" style="margin-top:30px;margin-bottom: 20px;">
     <div class="row">
       <div class="col-sm-5" style="height:100%; width:100%">
@@ -183,7 +187,7 @@
                 <div class="col-1"><i class="fas fa-phone"></i></div>
                 <div class="col-9">
                   <h6 class="font-weight-bold mb-0" style="font-size: 13px;">Phone Number:</h6>
-                  <p><a href="tel:+6142130103">+61 421301030</a></p>
+                  <p><a href="tel:+6124 449 225">+61 24 449 225</a></p>
                 </div>
               </div>
             </li>
