--- a/exterior-painting.html
+++ b/exterior-painting.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <!-- Header -->
+    <!-- Logon Header -->
     <div class="container-fluid">
         <div class="row image-container" style="background-color: white; height: 80px;">
             <a href="home.html"><img src="img/webimg/logo.png" class="img-responsive center" alt="Responsive image"
@@ -33,7 +33,7 @@
                 <li class="list-style">
                     <div class="list-icon">
                         <div>
-                            <a href="#"><span class="fas fa-envelope"
+                            <a href="mailto:miladpainting@gmail.com"><span class="fas fa-envelope"
                                     style="font-size: 2.0em; color: #1FF042 !Important; "></span>
                             </a>
                         </div>
@@ -47,12 +47,12 @@
                 <li class="list-style">
                     <div class="list-icon">
                         <div>
-                            <a href="#"><span class="fas fa-phone"
+                            <a href="tel:+6124 449 225"><span class="fas fa-phone"
                                     style="font-size: 2.0em; color: #1FF042 !Important;"></span></a>
                         </div>
                         <div style="padding-left: 15px;">
                             <b>Call Us</b> <br>
-                            <i>+61 42130103</i>
+                            <i>+61 24 449 225</i>
                         </div>
 
                     </div>
@@ -101,16 +101,18 @@
                 <div class="col-md-12">
                     <ul class="breadcrumb">
                         <li><a href="home.html">Home</a></li>
-                        <li>Residential Painters</li>
+                        <li>Exterior Painters</li>
                     </ul>
-                    <h1>Residential Painters</h1>
+                    <h1>Exterior Painters</h1>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- Main Content -->
     <div class="container" style="margin-top:30px">
         <div class="row">
+            <!-- Side Menu -->
             <div class="col-sm-2">
                 <div id="myNav" class="overlay">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -119,6 +121,7 @@
                         <a href="spray-painting.html">Spraying Painters</a>
                         <a href="roof-painting.html">Roof Painters</a>
                         <a href="commerical-painting.html">Commercial Painters</a>
+                        <a class="active" href="exterior-painting.html">Exterior Painters</a>
                         <a href="plastering.html">Plastering</a>
                         <a href="dulux-colour-consultation.html">Dulux Colour Consultation</a>
                     </div>
@@ -128,26 +131,73 @@
             </div>
 
             <div class="col-sm-10">
-                <h2>TITLE HEADING</h2>
-                <h5>Title description, Dec 7, 2017</h5>
-                <div class="fakeimg">Fake Image</div>
-                <p>Some text..</p>
-                <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
-                    eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation
-                    ullamco.</p>
-                <br>
-                <h2>TITLE HEADING</h2>
-                <h5>Title description, Sep 2, 2017</h5>
-                <div class="fakeimg">Fake Image</div>
-                <p>Some text..</p>
-                <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
-                    eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation
-                    ullamco.</p>
+                <h2 style="font-family: 'Zhi Mang Xing', cursive; font-size: 38px; font-weight:bold;">
+                    Exterior House Painters in Melbourne</h2>
+                <img style="width: 100%; " src="img/webimg/exterior_painter.jpeg">
+                </br>
+                <p style="font-size: 18px;">Painting the exterior of a house can completely transform its look, but it
+                    can also be a lot of hard work. Fortunately, Milad Painting can provide assistance with a team of
+                    professional exterior house painters in Melbourne who can take care of every element. Sit back and
+                    relax while we do all the hard work for you!</p>
+                </br>
+
+                <h2 style="font-family: 'Zhi Mang Xing', cursive; font-size: 30px; font-weight:bold;">
+                    The Advantages of Using Our Exterior House Painters in Melbourne</h2>
+                <p style="font-size: 18px;">When you opt for our team to paint the exterior of your home, you can enjoy
+                    the following advantages:
+                </p>
+                <p style="font-size: 18px;">
+                    &#10061; <strong>A fresh coat of paint for old or peeling paint jobs</strong> – We can refresh and
+                    rejuvenate the
+                    exterior of your house with a new paint job that will last for many years to come.
+                    <br />
+                    &#10061; <strong>Improved aesthetics</strong> – Our exterior house painters in Melbourne can help to
+                    improve the
+                    external appearance of your home, giving a great first impression to family, friends and neighbours.
+                    <br />
+                    &#10061; <strong>An increase in the value of your property</strong> – As the exterior of your house
+                    is often the
+                    first thing prospective home buyers see, a fresh new coat of paint can go a long way to making a
+                    good impression and therefore raising the value of your home.
+                    <br />
+                    &#10061; <strong>Better protection against the elements</strong> – We use durable external paints
+                    that offer
+                    protection against sun, rain and wind.
+                    <br />
+                </p>
+                <p style="font-size: 18px;">Whether you’re preparing your property for sale and would like to get the
+                    maximum amount possible, or
+                    you want to make your home the envy of your neighbours, friends and family, our exterior painting
+                    offers a fantastic solution.</p>
+                </br>
+                <h2 style="font-family: 'Zhi Mang Xing', cursive; font-size: 30px; font-weight:bold;">
+                    Why Choose Milad Painting When You Need Exterior House Painters in Melbourne?</h2>
+
+                <p style="font-size: 18px;">When you choose our exterior house painters in Melbourne, you can rest
+                    assured you’ll receive a premium-quality service that won’t cost you the earth. Boasting over 20
+                    years of painting experience, our domestic painters in Melbourne have what it takes to handle every
+                    aspect of your exterior painting job, from selecting the best paint type and colour for your
+                    specific needs through to carrying out the task in a safe and responsible manner. We can also
+                    provide assistance with a range of other house painting services, including interior painting, roof
+                    painting and maintenance painting. Whether you need interior house painters in Melbourne or you
+                    require help painting a roof, our team can be trusted to deliver the best results.
+                </p>
+                </br>
+
+                <h2 style="font-family: 'Zhi Mang Xing', cursive; font-size: 25px; font-weight:bold;">
+                    Request a Quote Today from Our Exterior House Painters in Melbourne</h2>
+                <p style="font-size: 18px;">Get in touch with our exterior house painters in Melbourne today to learn
+                    more or request a quote for our services. Simply call us on <a href="tel:+6124 449 225">+61 24 449
+                        225</a> or contact us online to
+                    receive a prompt response and have a chat to discuss your needs.
+                </p>
+                <p style="font-size: 18px;">In addition to house painters, we can also provide commercial painters in
+                    Melbourne for businesses
+                    requiring high-quality painting services. We additionally offer our painting services across
+                    Melbourne, so whether you need house painters in Glen Waverley, commercial painters in Melbourne or
+                    house painters in Dandenong, we have you covered.</p>
             </div>
+
         </div>
     </div>
 
@@ -182,7 +232,7 @@
                                 <div class="col-1"><i class="fas fa-phone"></i></div>
                                 <div class="col-9">
                                     <h6 class="font-weight-bold mb-0" style="font-size: 13px;">Phone Number:</h6>
-                                    <p><a href="tel:+6142130103">+61 421301030</a></p>
+                                    <p><a href="tel:+6124 449 225">+61 24 449 225</a></p>
                                 </div>
                             </div>
                         </li>
@@ -206,7 +256,7 @@
     </footer>
 
     <!-- Copyright -->
-    <section class="copyright">
+    <div class="copyright">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 ">
@@ -216,7 +266,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 
     <!-- Back to Top -->
     <a id="back-to-top" class="btn btn-light btn-lg back-to-top" role="button"><i class="fas fa-chevron-up"></i></a>
