--- a/service.html
+++ b/service.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="banner.css">
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="service-sidebar.css">
     <link rel="stylesheet" href="scroll-to-back.css">
 
 
@@ -20,7 +21,7 @@
 
 <body>
 
-    <!-- Header -->
+    <!-- Logon Header -->
     <div class="container-fluid">
         <div class="row image-container" style="background-color: white; height: 80px;">
             <a href="home.html"><img src="img/webimg/logo.png" class="img-responsive center" alt="Responsive image"
@@ -32,7 +33,7 @@
                 <li class="list-style">
                     <div class="list-icon">
                         <div>
-                            <a href="#"><span class="fas fa-envelope"
+                            <a href="mailto:miladpainting@gmail.com"><span class="fas fa-envelope"
                                     style="font-size: 2.0em; color: #1FF042 !Important; "></span>
                             </a>
                         </div>
@@ -46,12 +47,12 @@
                 <li class="list-style">
                     <div class="list-icon">
                         <div>
-                            <a href="#"><span class="fas fa-phone"
+                            <a href="tel:+6124 449 225"><span class="fas fa-phone"
                                     style="font-size: 2.0em; color: #1FF042 !Important;"></span></a>
                         </div>
                         <div style="padding-left: 15px;">
                             <b>Call Us</b> <br>
-                            <i>+61 42130103</i>
+                            <i>+61 24 449 225</i>
                         </div>
 
                     </div>
@@ -60,6 +61,7 @@
         </div>
     </div>
 
+    <!-- navigation part -->
     <nav class="navbar navbar-expand-md  navbar-dark bg-dark" id="menu-nav">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation-bar"
             aria-controls="navigation-bar" aria-expanded="false" aria-label="Toggle navigation">
@@ -93,37 +95,153 @@
         </div>
     </nav>
 
-    <div class="container" style="margin-top:30px">
+    <img style="width: 100%;" src="img/webimg/house-1.jpg">
+
+    <!-- Main content -->
+    <div class="container" style="max-width: 2080px;;background-color: bisque;">
         <div class="row">
-            <div class="col-sm-8">
-                <h2>TITLE HEADING</h2>
-                <h5>Title description, Dec 7, 2017</h5>
-                <div class="fakeimg">Fake Image</div>
-                <p>Some text..</p>
-                <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
-                    eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation
-                    ullamco.</p>
-                <br>
-                <h2>TITLE HEADING</h2>
-                <h5>Title description, Sep 2, 2017</h5>
-                <div class="fakeimg">Fake Image</div>
-                <p>Some text..</p>
-                <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
-                    eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation
-                    ullamco.</p>
+            <div class="col-sm-12">
+                <h1 style=" text-align: center; font-family: 'Zhi Mang Xing', cursive;
+                ">Our Service List: </h1>
             </div>
-            <div class="col-sm-4">
-                <h2>Side Bar</h2>
-                <!-- The sidebar -->
-                <div class="sidebar">
-                    <a class="active" href="#home">Home</a>
-                    <a href="#news">News</a>
-                    <a href="#contact">Contact</a>
-                    <a href="#about">About</a>
+            <!-- Side Menu -->
+            <div class="col-sm-12">
+                <div id="myNav" class="overlay">
+                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                    <div class="overlay-content">
+                        <a href="residential-painting.html">Residential Painters</a>
+                        <a href="spray-painting.html">Spraying Painters</a>
+                        <a href="roof-painting.html">Roof Painters</a>
+                        <a href="commerical-painting.html">Commercial Painters</a>
+                        <a href="exterior-painting.html">Exterior Painters</a>
+                        <a href="plastering.html">Plastering</a>
+                        <a href="dulux-colour-consultation.html">Dulux Colour Consultation</a>
+                    </div>
+                </div>
+
+                <span style="font-size:20px;cursor:pointer" onclick="openNav()">&#9776; Our Service</span>
+            </div>
+            <div style="margin-bottom: 10px;" class="col-xs-4 col-md-4 col-sm-4">
+                <div class="card" id="card-style">
+                    <img class="card-img-top" src="img/webimg/residential_painter.jpeg" alt="Card image cap"
+                        title="Residential Painters">
+                    <div class="card-body"
+                        style="background-color: rgb(255, 255, 255); text-decoration: none; color:black;">
+                        <!-- put the link -->
+                        <a class="stretched-link" style="text-decoration: none; color: black;"
+                            href="residential-painting.html">
+                            <h3 class="card-title">
+                                <strong>Residential Painters</strong>
+                            </h3>
+                        </a>
+                        <p class="card-text">We look after of making freshly new painting or even renovation in order to
+                            make
+                            the house/company has greater look.</p>
+                    </div>
+                </div>
+            </div>
+            <div style="margin-bottom: 10px;" class="col-xs-4 col-md-4 col-sm-4">
+                <div class="card" id="card-style">
+                    <img class="card-img-top" src="img/webimg/commercial_painter.jpeg" alt="Card image cap"
+                        title="Commercial Painters">
+                    <div class="card-body"
+                        style="background-color: rgb(255, 255, 255); text-decoration: none; color:black;">
+                        <a class="stretched-link" style="text-decoration: none; color: black;"
+                            href="commerical-painting.html">
+                            <h3 class="card-title">
+                                <strong>Commercial Painters</strong>
+                            </h3>
+                        </a>
+                        <p class="card-text">This idea will be the best for those ones who looking for increasing their
+                            properties.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-4 col-md-4 col-sm-4">
+                <div style="margin-bottom: 10px;" class="card" id="card-style">
+                    <img class="card-img-top" src="img/webimg/roof_painter.jpeg" alt="Card image cap"
+                        title="Roof Painters">
+                    <div class="card-body"
+                        style="background-color: rgb(254, 255, 254); text-decoration: none; color:black;">
+                        <a class="stretched-link" style="text-decoration: none; color: black;"
+                            href="roof-painting.html">
+                            <h3 class="card-title">
+                                <strong>Roof Painters</strong>
+                            </h3>
+                        </a>
+                        <p class="card-text">It means the roof is one the most obviously part to see difference of
+                            replacement or repair.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-4 col-md-4 col-sm-4">
+                <div style="margin-bottom: 10px;" class="card" id="card-style">
+                    <img class="card-img-top" src="img/webimg/exterior_painter.jpeg" alt="Card image cap"
+                        title="Exterior Painters">
+                    <div class="card-body"
+                        style="background-color: rgb(255, 255, 255); text-decoration: none; color:black;">
+                        <a class="stretched-link" style="text-decoration: none; color: black;"
+                            href="exterior-painting.html">
+                            <h3 class="card-title">
+                                <strong>Exterior Painters</strong>
+                            </h3>
+                        </a>
+                        <p class="card-text">Painting your exteriors, be it at home or office is a crucial thing to
+                            be done
+                            because exterior painting gives an apt finish to the whole painting process.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-4 col-md-4 col-sm-4">
+                <div style="margin-bottom: 10px;" class="card" id="card-style">
+                    <img class="card-img-top" src="img/webimg/spray_painter_1.png" alt="Card image cap"
+                        title="Spraying Painters">
+                    <div class="card-body"
+                        style="background-color: rgb(255, 255, 255); text-decoration: none; color:black;">
+                        <a class="stretched-link" style="text-decoration: none; color: black;"
+                            href="spray-painting.html">
+                            <h3 class="card-title">
+                                <strong>Spraying Painters</strong>
+                            </h3>
+                        </a>
+                        <p class="card-text">Spray painting is a technique that is extensively used these days because
+                            they are easy, quick and can be finished before the scheduled period of time. It also
+                            reduces manual labour and relieves the painters from getting stressed! Thus water based
+                            paints are becoming popular. </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-4 col-md-4 col-sm-4">
+                <div style="margin-bottom: 10px;" class="card" id="card-style">
+                    <img class="card-img-top" src="img/webimg/plastering.jpg" alt="Card image cap" title="Plastering">
+                    <div class="card-body"
+                        style="background-color: rgb(255, 255, 255); text-decoration: none; color:black;">
+                        <a class="stretched-link" style="text-decoration: none; color: black;" href="plastering.html">
+                            <h3 class="card-title">
+                                <strong>Plastering</strong>
+                            </h3>
+                        </a>
+                        <p class="card-text">it is an art by itself which requires accuracy and perfection in the
+                            technique, extreme attention to minute details, and fair amount of knowledge about how it
+                            has to be done. </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-4 col-md-4 col-sm-4">
+                <div style="margin-bottom: 10px;" class="card" id="card-style">
+                    <img class="card-img-top" src="img/webimg/dulux_colour_consultant.jpg" alt="Card image cap"
+                        title="Dulux Colour Consultation">
+                    <div class="card-body"
+                        style="background-color: rgb(255, 255, 255); text-decoration: none; color:black;">
+                        <a class="stretched-link" style="text-decoration: none; color: black;"
+                            href="dulux-colour-consultation.html">
+                            <h3 class="card-title">
+                                <strong>Dulux Colour Consultation</strong>
+                            </h3>
+                        </a>
+                        <p class="card-text">Milad Painting use products from the brand Dulux! Dulux Company offers
+                            consultation about the kind of paint you choose, the colour scheme etc. </p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -160,7 +278,7 @@
                                 <div class="col-1"><i class="fas fa-phone"></i></div>
                                 <div class="col-9">
                                     <h6 class="font-weight-bold mb-0" style="font-size: 13px;">Phone Number:</h6>
-                                    <p><a href="tel:+6142130103">+61 421301030</a></p>
+                                    <p><a href="tel:+6124 449 225">+61 24 449 225</a></p>
                                 </div>
                             </div>
                         </li>
@@ -183,9 +301,8 @@
         </div>
     </footer>
 
-
     <!-- Copyright -->
-    <section class="copyright">
+    <div class="copyright">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 ">
@@ -195,7 +312,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 
     <!-- Back to Top -->
     <a id="back-to-top" class="btn btn-light btn-lg back-to-top" role="button"><i class="fas fa-chevron-up"></i></a>
@@ -209,6 +326,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
     <script src="scroll-to-back.js"></script>
+
+    <script src="service-sidebar.js"></script>
+
 
 </body>
 
