--- a/home.html
+++ b/home.html
@@ -399,7 +399,7 @@
       <div class="container">
         <div class="row">
           <div class='col-md-offset-2 col-md-8 text-center'>
-            <h2>Our Cilents Comments</h2>
+            <h2>Our Clients Comments</h2>
           </div>
         </div>
         <div class='row'>
