--- a/residential-painting.html
+++ b/residential-painting.html
@@ -209,7 +209,8 @@
                 <h4 style="font-family: 'Zhi Mang Xing', cursive;  font-size: 24px; font-weight:bold;">
                     Give Our Domestic Painters in Melbourne a Call Today </h4>
                 <p style="font-size: 18px;">Milad Painting is your one-stop shop for domestic painters in Melbourne.
-                    Call our friendly team on <a href="tel:+6142130103">0421301030</a> to learn more, request a quote
+                    Call our friendly team on <a href="tel:+6124 449 225">+61 24 449 225</a> to learn more, request a
+                    quote
                     or make a booking for our house painting services in
                     Melbourne.
                 </p>
